--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     links:
       - db
     ports:
-      - "8000:8000"
+      - ${API_PORT_LOCAL}:8000
     volumes:
       - /app/var
       - /app/vendor
@@ -28,7 +28,7 @@ services:
     build: ./db
     restart: always
     ports:
-      - 5432:5432
+      - ${DB_PORT_LOCAL}:5432
     environment:
       POSTGRES_DB: skystar
       POSTGRES_USER: user
@@ -39,7 +39,7 @@ services:
     links:
       - db
     ports:
-      - 8080:8080
+      - ${ADMINER_PORT_LOCAL}:8080
     environment:
       - ADMINER_DESIGN=pepa-linha
   app:
@@ -47,7 +47,7 @@ services:
     expose:
       - 4200
     ports:
-      - 4200:4200
+      - ${APP_PORT_LOCAL}:4200
     volumes:
       - /app/.angular
       - /app/node_modules
