--- a/api/dev/.env
+++ b/api/dev/.env
@@ -30,3 +30,7 @@ APP_SECRET=522e97bbbb3a2c90e75b87498148117d
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 DATABASE_URL="postgresql://user:pswd@db:5432/skystar?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
