--- a/api/dev/config/services.yaml
+++ b/api/dev/config/services.yaml
@@ -14,7 +14,7 @@ services:
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
-        resource: '../src/'
+        resource: '../src'
         exclude:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
@@ -23,3 +23,24 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    'App\DataProvider\ConstellationsCollectionDataProvider':
+        tags: [ { name: 'api_platform.collection_data_provider', priority: 1 } ]
+        # Autoconfiguration must be disabled to set a custom priority
+        autoconfigure: false
+
+    'App\DataProvider\ObjetDistantCollectionDataProvider':
+        tags: [ { name: 'api_platform.collection_data_provider', priority: 1 } ]
+        # Autoconfiguration must be disabled to set a custom priority
+        autoconfigure: false
+
+    App\Controller\:
+        resource: '../src/Controller/'
+        tags: [ 'controller.service_arguments' ]
+    'App\Filter\ConstellationFilter':
+        # The "arguments" key can be omitted if the autowiring is enabled
+        # The "tags" key can be omitted if the autoconfiguration is enabled
+        tags: [ 'api_platform.filter' ]
+    'App\Filter\ObjetDistantFilter':
+        # The "arguments" key can be omitted if the autowiring is enabled
+        # The "tags" key can be omitted if the autoconfiguration is enabled
+        tags: [ 'api_platform.filter' ]
