--- a/api/dev/config/services.yaml
+++ b/api/dev/config/services.yaml
@@ -4,22 +4,28 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+  RA_MAX_RANGE: "%env(RA_MAX_RANGE)%"
+  RA_MIN_RANGE: "%env(RA_MIN_RANGE)%"
+  RA_DEFAULT_RANGE: "%env(RA_DEFAULT_RANGE)%"
+  DECA_MAX_RANGE: "%env(DECA_MAX_RANGE)%"
+  DECA_MIN_RANGE: "%env(DECA_MIN_RANGE)%"
+  DECA_DEFAULT_RANGE: "%env(DECA_DEFAULT_RANGE)%"
 
 services:
-    # default configuration for services in *this* file
-    _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+  # default configuration for services in *this* file
+  _defaults:
+    autowire: true # Automatically injects dependencies in your services.
+    autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
-    App\:
-        resource: '../src/'
-        exclude:
-            - '../src/DependencyInjection/'
-            - '../src/Entity/'
-            - '../src/Kernel.php'
-            - '../src/Tests/'
+  # makes classes in src/ available to be used as services
+  # this creates a service per class whose id is the fully-qualified class name
+  App\:
+    resource: "../src/"
+    exclude:
+      - "../src/DependencyInjection/"
+      - "../src/Entity/"
+      - "../src/Kernel.php"
+      - "../src/Tests/"
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+  # add more service definitions when explicit configuration is needed
+  # please note that last definitions always *replace* previous ones
