--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
     ports:
       - ${ADMINER_PORT_LOCAL}:8080
     environment:
-      - ADMINER_DESIGN=pepa-linha
+      - ADMINER_DESIGN=mvt
   app:
     build: ./app
     expose:
