quick fix : bug postgresql, ajout des sequences

--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -7,3 +7,4 @@ COPY ./2-objet_distant.sql /docker-entrypoint-initdb.d/
 COPY ./3-objet_proche.sql /docker-entrypoint-initdb.d/
 COPY ./4-determiner.sql /docker-entrypoint-initdb.d/
 COPY ./5-grouper.sql /docker-entrypoint-initdb.d/
+COPY ./6-sequences.sql /docker-entrypoint-initdb.d/
