--- a/api/dev/config/packages/api_platform.yaml
+++ b/api/dev/config/packages/api_platform.yaml
@@ -5,3 +5,6 @@ api_platform:
         json: ['application/merge-patch+json']
     swagger:
         versions: [3]
+    defaults:
+        pagination_client_enabled: true
+        pagination_items_per_page: 10
